# indexed-parquet-dataset

./: .gitignore  404.html  README.md  README.ru.md  implementation_plan.md  index.html  logo.png.kra  logo.png~  mkdocs.yml  pyproject.toml  pytorch_example.py  repro_issue.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
debug_merge_data/: f1.parquet  f2.parquet
demo_data/: data.parquet
docs/: index.md  index.ru.md
docs/explanation/: architecture.md
docs/how-to/: column-ops.md  filtering.md  materialization.md  schema-evolution.md  schema-evolution.ru.md
docs/reference/: api.md
docs/tutorials/: deep_learning.md  quickstart.md  (+2 more)
repro_data/: test.parquet
repro_issue/: f1.parquet  f2.parquet
ru/: index.html
scratch/: demo_batching.py  materialized.parquet  verify_info_fix.py  verify_schema_tools.py  verify_updates.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
test_clone_data/: data.parquet
test_data_fix/: data.parquet
test_data_info/: file1.parquet  file2.parquet  file3.parquet
test_verify/: file1.parquet  file2.parquet
tests/: test_advanced.py  test_batch_filtering_ux.py  test_dataloader_fix.py  test_dataset.py  test_exact_user_scenario.py  test_file_handling_ux.py  test_filter_progress.py  test_lazy_filter_limit.py  test_map_merge.py  test_must_have_v2.py  test_nested_none_bug.py  test_new_features.py  test_none_fill_without_collate_fn.py  test_ops.py  test_pytorch_dataloader.py  test_schema_inference.py  test_sharding_edge_cases.py  test_virtual_source_and_glob.py
(+36 files in other folders)
