[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indexed-parquet-dataset"
dynamic = ["version"]
description = "High-performance O(1) random access indexer for Parquet datasets in PyTorch"
readme = "README.md"
authors = [{ name="Your Name", email="your.email@example.com" }]
license = { text="Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyarrow>=12.0.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/indexed_parquet/_version.py"
